# errorease

./: .pre-commit-config.yaml  README.md  pyproject.toml  reproduce_issue.py  setup.py  test_regex.py
errorease/: api.py  error_interceptor.py  hooks.py  modules.txt  patches.txt
errorease/config/: desktop.py  docs.py
errorease/errorease/doctype/errorease_settings/: errorease_settings.js  errorease_settings.json  errorease_settings.py  test_errorease_settings.py
errorease/patches/v1_0/: __init__.py  intercept_all_errors.py
errorease/public/: build.json
errorease/public/css/: errorease.css
errorease/public/js/: errorease.js
errorease/www/: error_overlay.py
