[project]
name = "errorease"
description = "AI-powered error explanation module for Frappe"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

authors = [
    { name = "Memoona Iqbal", email = "memoonaiqbal3710@gmail.com" }
]

# Do NOT add frappe here — bench manages it
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# ------------------------------
# Frappe / Bench Configuration
# ------------------------------
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.bench.dev-dependencies]
# Example:
# black = "~=24.1.0"

# ------------------------------
# Ruff Configuration
# ------------------------------
[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF"  # Ruff-specific
]

ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191"
]

typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
